k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: opentraum
  labels:
    app.kubernetes.io/part-of: opentraum
    environment: production
